# audio2

./: .gitignore  README.md
alsa_gain/alsa_gain/: alsa_gain.py  mixer_thread.py
alsa_gain_msgs/: package.xml
audio2_capture/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
audio2_capture/launch/: capture.launch.py  capture.launch.xml  capture_to_file.launch.py  capture_to_file.launch.xml  capture_wave.launch.py  capture_wave.launch.xml
audio2_capture/src/: audio2_capture_node.cpp
audio2_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
audio2_common_msgs/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
audio2_common_msgs/msg/: AudioDataStamped.msg
audio2_play/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml
audio2_play/launch/: play.launch.py  play.launch.xml
audio2_play/src/: audio2_play_node.cpp
audio2_stream/: CMakeLists.txt  TESTING_IMPLEMENTATION_SUMMARY.md  TEST_README.md  package.xml
audio2_stream/include/audio2_stream/: AlsaDeviceImpl.hpp  AudioStream.hpp  IAlsaDevice.hpp  alsaops.hpp  buffer_file.hpp  config.hpp
audio2_stream/src/: alsaops.cpp  audio2_capture_node.cpp  audio2_play_node.cpp  audio2_play_remote_node.cpp  audio2_stream_node.cpp  buffer_file.cpp  file_play.cpp  loop_file.cpp  publish_file.cpp  subscribe_file.cpp
audio2_stream/src/lib/: AlsaDeviceImpl.cpp  AudioStream.cpp  alsaops.cpp  buffer_file.cpp
audio2_stream/test/: MockAlsaDevice.hpp  test_alsa_mocked.cpp  test_audio_stream.cpp
audio2_stream_msgs/: CMakeLists.txt  package.xml
audio2_stream_msgs/msg/: AudioChunk.msg  PlayFile.msg  StreamHeader.msg
audio_capture/: CHANGELOG.rst  package.xml
audio_common/: package.xml
audio_common_msgs/: CHANGELOG.rst  package.xml
audio_play/: package.xml
sndplay/: CMakeLists.txt  package.xml
sndplay/include/sndplay/: alsaops.hpp  buffer_file.hpp
sndplay/src/: alsaops.cpp  buffer_file.cpp  loop_file.cpp  publish_file.cpp  sndplay_node.cpp  stream_file.cpp  subscribe_file.cpp
sndplay_msgs/: CMakeLists.txt  package.xml
sound2_play/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  package.xml
sound2_play/include/sound_play/: sound_play.h
sound2_play/launch/: soundplay_node.launch.xml
sound2_play/msg/: SoundRequest.msg
sound2_play/scripts/: play.py  playbuiltin.py  playpackage.py  say.py  shutup.py  soundclient_example.py  soundplay_node.py  test.py  test_actionlib_client.py
sound2_play/scripts/test/: test_sound_client.py
sound2_play/sound2_play/: __init__.py  libsoundplay.py
sound2_play/test/: CMakeLists.txt  test.cpp  test.launch
sound_play/: CHANGELOG.rst  package.xml
