<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>audio_capture</name>
   <version>0.1.0</version>
   <description>
      Transports audio from a source to a destination. Audio sources can come
      from a microphone or file. The destination can play the audio or save it
      to an mp3 file.
   </description>
   <maintainer email="kent@caspia.com">R. Kent James</maintainer>
   <author>Nate Koenig</author>
   <license>BSD</license>
   <url type="repository">https://github.com/rkent/audio2</url>

   <buildtool_depend>ament_cmake</buildtool_depend>

   <build_depend>audio_common_msgs</build_depend>
   <build_depend>boost</build_depend>
   <build_depend>diagnostic_updater</build_depend>
   <build_depend>rclcpp</build_depend>
   <build_depend>rclcpp_components</build_depend>

   <build_depend>libgstreamer1.0-dev</build_depend>
   <build_depend>libgstreamer-plugins-base1.0-dev</build_depend>

   <exec_depend>audio_common_msgs</exec_depend>
   <exec_depend>diagnostic_updater</exec_depend>
   <exec_depend>launch_xml</exec_depend>
   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_components</exec_depend>

   <exec_depend>gstreamer1.0</exec_depend>
   <exec_depend>gstreamer1.0-alsa</exec_depend>
   <exec_depend>gstreamer1.0-plugins-base</exec_depend>
   <exec_depend>gstreamer1.0-plugins-good</exec_depend>
   <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
