<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>audio_common_msgs</name>
   <version>0.1.0</version>
   <description>
      Messages for transmitting audio via ROS
   </description>
   <maintainer email="kent@caspia.com">R. Kent James</maintainer>
   <author>Nate Koenig</author>
   <license>BSD</license>
   <url type="repository">https://github.com/rkent/audio2</url>

   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>

   <depend>std_msgs</depend>

   <exec_depend>rosidl_default_runtime</exec_depend>

   <member_of_group>rosidl_interface_packages</member_of_group>

   <export>
     <build_type>ament_cmake</build_type>
   </export>
</package>
