<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>audio_common</name>
   <version>0.1.0</version>
   <description>
      Common code for working with audio in ROS
   </description>
   <maintainer email="kent@caspia.com">R. Kent James</maintainer>
   <author>Blaise Gassend</author>
   <license>BSD</license>  
   <url type="repository">https://github.com/rkent/audio2</url>

   <buildtool_depend>ament_cmake</buildtool_depend>

   <exec_depend>audio_capture</exec_depend>
   <exec_depend>audio_common_msgs</exec_depend>
   <exec_depend>audio_play</exec_depend>

   <export>
     <build_type>ament_cmake</build_type>
   </export>
</package>
