<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
   <name>sound2_play</name>
   <version>0.1.0</version>
   <description>
      sound2_play provides a ROS node that translates commands on a ROS topic (<tt>robotsound</tt>) into sounds. The node supports built-in sounds, playing OGG/WAV files, and doing speech synthesis via festival. C++ and Python bindings allow this node to be used without understanding the details of the message format, allowing faster development and resilience to message format changes.
   </description>
   <maintainer email="kent@caspia.com">R. Kent James</maintainer>
   <author>Blaise Gassend</author>
   <license>BSD</license>
   <url type="repository">https://github.com/rkent/audio2</url>

   <buildtool_depend>ament_cmake</buildtool_depend>
   <buildtool_depend>ament_cmake_python</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
   <buildtool_depend>rosidl_generator_py</buildtool_depend>
   <buildtool_depend>python3-setuptools</buildtool_depend>

   <build_depend>action_msgs</build_depend>
   <build_depend>audio2_common_msgs</build_depend>
   <build_depend>boost</build_depend>
   <build_depend>builtin_interfaces</build_depend>

   <exec_depend>action_msgs</exec_depend>
   <exec_depend>audio2_common_msgs</exec_depend>
   <exec_depend>builtin_interfaces</exec_depend>
   <exec_depend>festival</exec_depend>
   <exec_depend>launch_xml</exec_depend>
   <exec_depend>rclpy</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>

   <exec_depend>gstreamer1.0</exec_depend>
   <exec_depend>gstreamer1.0-alsa</exec_depend>
   <exec_depend>gstreamer1.0-plugins-base</exec_depend>
   <exec_depend>gstreamer1.0-plugins-ugly</exec_depend>
   <exec_depend>gstreamer1.0-plugins-good</exec_depend>
   <exec_depend>python3-gi</exec_depend>

   <member_of_group>rosidl_interface_packages</member_of_group>

   <export>
      <build_type>ament_cmake</build_type>
   </export>
</package>
